Fix line breaks in editor (#4879)

--- a/client/src/app/ui/modules/editor/components/editor/editor.component.scss
+++ b/client/src/app/ui/modules/editor/components/editor/editor.component.scss
@@ -88,12 +88,6 @@
                     border: 1px dashed #bbb;
                 }
             }
-            p {
-                br:only-child {
-                    content: '';
-                    display: inline-block;
-                }
-            }
 
             @include detail-view-appearance.detail-view-appearance;
         }
